old-archive/pos-dev/orig testing/6-deploy-pos-drugpricer.yaml
---
# Unused service just for istio purposes
---
apiVersion: v1
kind: Service
metadata:
  name: pos-drugpricer
  namespace: pos
  labels:
    app: pos-drugpricer
spec:
  # ports:
  # - port: 49500
    # name: tcp
  clusterIP: None
  selector:
    app: pos-drugpricer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pos-drugpricer-0
  name: pos-drugpricer-0
  namespace: pos
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pos-drugpricer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pos-drugpricer
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/bin/DrugPricer","-c","/opt/pos/etc/DrugPricer.cfg","-s","DRUGPRICER"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-drugpricer-0
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /
            # port: 5555
            # scheme: HTTP
          # initialDelaySeconds: 5
          # periodSeconds: 2
          # successThreshold: 1
          # timeoutSeconds: 1
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "50m"
            memory: "150Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-drugpricer-0
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pos-drugpricer-1
  name: pos-drugpricer-1
  namespace: pos
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pos-drugpricer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pos-drugpricer
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/bin/DrugPricer","-c","/opt/pos/etc/DrugPricer.cfg","-s","DRUGPRICER"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-drugpricer-1
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /
            # port: 5555
            # scheme: HTTP
          # initialDelaySeconds: 5
          # periodSeconds: 2
          # successThreshold: 1
          # timeoutSeconds: 1
        resources:
          limits:
            cpu: "50m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-drugpricer-1
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pos-drugpricer-2
  name: pos-drugpricer-2
  namespace: pos
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pos-drugpricer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pos-drugpricer
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/bin/DrugPricer","-c","/opt/pos/etc/DrugPricer.cfg","-s","DRUGPRICER"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-drugpricer-2
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /
            # port: 5555
            # scheme: HTTP
          # initialDelaySeconds: 5
          # periodSeconds: 2
          # successThreshold: 1
          # timeoutSeconds: 1
        resources:
          limits:
            cpu: "50m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-drugpricer-2
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pos-drugpricer-3
  name: pos-drugpricer-3
  namespace: pos
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pos-drugpricer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pos-drugpricer
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/bin/DrugPricer","-c","/opt/pos/etc/DrugPricer.cfg","-s","DRUGPRICER"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-drugpricer-3
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /
            # port: 5555
            # scheme: HTTP
          # initialDelaySeconds: 5
          # periodSeconds: 2
          # successThreshold: 1
          # timeoutSeconds: 1
        resources:
          limits:
            cpu: "50m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-drugpricer-3
        name: config
---
