old-archive/pos-dev/orig testing/9-ing-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: pos-drugpricer-soap.pos.svc.cluster.local
  name: k8posdev
  namespace: pos
spec:
  rules:
  - host: k8posdev.medimpact.com
    http:
      paths:
      - backend:
          serviceName: pos-drugpricer-soap
          servicePort: 49202
        path: /
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
  # annotations:
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # kubernetes.io/ingress.class: nginx
  # name: nginx-ingress-443
  # namespace: pos
# spec:
  # rules:
  # - host: k8pos.medimpact.com
    # http:
      # paths:
      # - backend:
          # serviceName: pos-drugpricer-soap
          # servicePort: 8443
        # path: /
  # tls:
  # - hosts:
    # - k8pos.medimpact.com
    # secretName: k8pos.medimpact.com.tls
